--- a/SHOP_dist/app/about.html
+++ b/SHOP_dist/app/about.html
@@ -9,7 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
-  <link rel="stylesheet" type="text/css" href="css/about.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/content.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1166,7 +1166,7 @@
         </div>
       </div>
     </div>
-    <div class="main">
+    <div class="main none-margin">
       <div class="breadcrumbs">
         <div class="container">
           <ul class="holder">
