--- a/SHOP_dist/app/agreement.html
+++ b/SHOP_dist/app/agreement.html
@@ -9,7 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
-  <link rel="stylesheet" type="text/css" href="css/choise.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/content.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1185,9 +1185,9 @@
           </div>
         </div>
       </div>
-      <div class="choise">
+      <div class="agreement">
         <div class="container">
-          <div class="with_sidebar-container">
+          <div class="with_sidebar-container margin-none">
             <div class="left_sidebar_nav">
               <div class="left_sidebar_nav-content">
                 <ul>
@@ -1219,6 +1219,50 @@
               </div>
             </div>
             <div class="right_content-container">
+              <div class="terms-container">
+                <p>Текст Договора является публичной офертой (в соответствии со статьей 435 и частью 2 статьи 437 Гражданского кодекса РФ).</p>
+                <b>Настоящий Договор не требует двустороннего подписания и действителен в электронном виде.</b>
+                <p class="terms-list-header">Оглавление:</p>
+                <ol class="terms-list">
+                  <li><a href="#1">Общие положения</a></li>
+                  <li><a href="#2">Термины и определения</a></li>
+                </ol>
+                <ol class="terms-content">
+                  <li><a name="1">Общие положения</a>
+                    <ol>
+                      <li>Настоящее Пользовательское соглашение (далее – «Соглашение», «Договор») относится к сайту интернет-магазина «Сантехника-Онлайн», расположенному по адресу: http://santehnika-online.ru.</li>
+                      <li>Правообладателем исключительных прав на объект авторского права сайт интернет-магазина «Сантехника-Онлайн» (далее – «Сайт») является общество с ограниченной ответственностью «Торговый Дом Сантон» (ИНН 7721485393, ОГРН 1167746406607).</li>
+                      <li>Общество с ограниченной ответственностью «Торговый Дом Сантон» предоставляет индивидуальному предпринимателю Белову Сергею Александровичу (235201128300, ОГРНИП 313501234000013) неисключительное право на использование Сайта, входящего в домен santehnika-online.ru, на основании лицензионного договора.</li>
+                      <li>Настоящее Соглашение является предложением (публичной офертой) ИП Белова С.А. в адрес любого физического лица, обладающего дееспособностью и необходимыми полномочиями, заключить договор с ИП Беловым С.А. на условиях, предусмотренных действующим законодательством Российской Федерации (в соответствии со ст. 435 и ч. 2 ст. 437 Гражданского кодекса РФ), и содержит все существенные условия договора и порядок оказания услуг.</li>
+                      <li>Администрация Сайта оставляет за собой право в любое время изменять, добавлять или удалять пункты настоящего Соглашения без уведомления Покупателя.</li>
+                      <li>Продолжение использования Сайта Покупателем означает принятие Соглашения и изменений, внесенных в настоящее Соглашение.</li>
+                      <li>Покупатель несет персональную ответственность за проверку настоящего Соглашения на наличие изменений в нем.</li>
+                    </ol>
+                  </li>
+                  <li><a name="2">Термины и определения</a>
+                    <ol>
+                      <p>Перечисленные ниже термины имеют для целей настоящего Соглашения следующее значение:</p>
+                      <li><b>Интернет-магазин</b> – официальный Сайт, расположенный на доменном имени http://santehnika-online.ru, содержащий информацию о товарах, продавце, позволяющий осуществить выбор, заказ и (или) приобретение товара. Понятия «интернет-магазин» и «магазин», а также «интернет-адрес http://santehnika-online.ru» являются равносильными и трактуются аутентично, по контексту оферты.</li>
+                      <li><b>Администрация сайта</b> – сотрудники, уполномоченные на управление Сайтом, действующие от имени ИП Белова С.А.</li>
+                      <li><b>Товар</b> – объект соглашения сторон, перечень наименований ассортимента, представленный в официальном интернет-магазине.</li>
+                      <li><b>Товар ненадлежащего качества</b> – товар, не соответствующий описанию или образцу.</li>
+                      <li><b>Заказной товар</b>&nbsp;– товар, оформленный под заказ и имеющий индивидуально-определенные свойства, не подлежащий возврату или обмену на аналогичный товар.</li>
+                      <li><b>Заказ</b>&nbsp;– оформленный запрос покупателя на приобретение и доставку товаров, выбранных покупателем в интернет-магазине продавца, по указанному покупателем адресу.</li>
+                      <li><b>Продавец</b>&nbsp;– индивидуальный предприниматель Белов Сергей Александрович (юридический адрес: 143989, Московская область, г. Железнодорожный, ул. Граничная, д. 14, кв. 85).</li>
+                      <li><b>Покупатель</b> – любое физическое лицо, акцептировавшее публичную оферту на условиях настоящей оферты.</li>
+                      <li><b>Получатель</b>&nbsp;– лицо, уполномоченное покупателем на осуществление приемки товара.</li>
+                      <li><b>Акцепт (Безусловный акцепт)</b>&nbsp;– в соответствии со ст. 438 Гражданского кодекса РФ полное и безоговорочное принятие Договора лицом, которому адресована оферта, о ее принятии.</li>
+                      <li><b>Персональные данные (ПДн)</b>&nbsp;– информация, относящаяся к покупателю – физическому лицу, в том числе указанная им при оформлении заказа.</li>
+                      <li><b>Аналог собственноручной подписи</b>&nbsp;– проставление отметки (галочки) в окне «Согласен с условиями оферты» при оформлении заказа.</li>
+                      <li><b>Факсимиле</b>&nbsp;– штамп, обеспечивающий точное воспроизведение собственноручной росписи должностного лица и служащий для удостоверения его полномочий.</li>
+                      <li><b>Пункт самовывоза</b> – место осуществления предпринимательской деятельности продавца, где покупатель самостоятельно получает товар.</li>
+                      <li><b>Менеджер</b> – сотрудник продавца, уполномоченный на совершение продаж от имени ИП Белова С.А.</li>
+                      <li><b>Служба доставки</b> – организация, осуществляющая доставку товара.</li>
+                      <li><b>Содержание сайта интернет-магазина</b> (далее – «Содержание») – охраняемые результаты интеллектуальной деятельности, включая тексты литературных произведений, их названия, предисловия, аннотации, статьи, иллюстрации, обложки, музыкальные произведения с текстом или без текста, графические, текстовые, фотографические, производные, составные и иные произведения, пользовательские интерфейсы, визуальные интерфейсы, названия товарных знаков, логотипы, программы для ЭВМ, базы данных, а также дизайн, структура, выбор, координация, внешний вид, общий стиль и расположение данного Содержания, входящего в состав Сайта, и другие объекты интеллектуальной собственности все вместе и/или по отдельности, содержащиеся на Сайте интернет-магазина.</li>
+                    </ol>
+                  </li>
+                </ol>
+              </div>
             </div>
           </div>
         </div>
@@ -1391,7 +1435,7 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/assets.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/about.js"></script>
+    <script src="js/content.js"></script>
   </div>
 </body>
 
