--- a/SHOP_dist/app/clients.html
+++ b/SHOP_dist/app/clients.html
@@ -9,6 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/content.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1184,7 +1185,7 @@
           </div>
         </div>
       </div>
-      <div class="delivery">
+      <div class="clients">
         <div class="container">
           <div class="with_sidebar-container">
             <div class="left_sidebar_nav">
@@ -1218,7 +1219,75 @@
               </div>
             </div>
             <div class="right_content-container">
-
+              <div class="about-section">
+                <div class="text-block">
+                      <p><strong>Тем, кто ищет лучшее для бизнеса</strong></p>
+                      Станьте участником нашей программы 
+                      для корпоративных клиентов и получите 
+                      специальные условия на приобретение 
+                      сантехнических товаров от мировых производителей.
+                </div>
+                <div class="img-block">
+                  <img src="images/intro.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="feedback-block">
+            <div class="block-title">
+              Юридическим лицам
+            </div>
+            <div class="block-content">
+              <div class="text-section">
+                <ul>
+                  <li>Гибкая система скидок</li>
+                  <li>Индивидуальные условия совместной работы</li>
+                  <li>Развитая транспортная и складская логистика с возможностью хранения товара на наших складах</li>
+                  <li>Доставка по всей России</li>
+                  <li>Профессиональные консультанты</li>
+                  <li>110 000 товарных позиций от 600 брендов в онлайн-каталоге</li>
+                  <li>Постпродажное обслуживание</li>
+                  <li>Минимальное время на решение вопросов по товару и обработку рекламаций</li>
+                </ul>
+              </div>
+              <div class="note-list">
+                  <div class="stick style2">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Преимущества</div>
+                        <ul>
+                          <li>Юридическое сопровождение сделки и согласование условий сотрудничества</li>
+                          <li>Своевременное предоставление закрывающих документов</li>
+                          <li>Экономия времени при подборе товаров в удобном онлайн-каталоге</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="feedback-form">
+              <div class="form-heading">
+                Обратная связь
+              </div>
+              <form action="#">
+                <div class="form-group">
+                  <input class="top-input" placeholder="Как к вам обращаться?" type="text" required="" value="">
+                  <input class="top-input" placeholder="Контактный телефон или E-Mail" type="text" required="" value="">
+                </div>
+                <div class="form-group">
+                  <textarea class="textarea" placeholder="Текст сообщения" required=""></textarea>
+                </div>
+                <div class="form-group">
+                  <button class="add-photo">Добавить фотографию</button>
+                  <span class="description">До 5 фотографий</span>
+                </div>
+                <div class="feedback-note">
+                  Ваше сообщение будет рассмотрено соответствующим специалистом.
+                </div>
+                <div class="form-group">
+                  <button class="submit" type="submit">Отправить сообщение</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
@@ -1391,7 +1460,7 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/assets.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/about.js"></script>
+    <script src="js/content.js"></script>
   </div>
 </body>
 
