--- a/SHOP_dist/app/payment.html
+++ b/SHOP_dist/app/payment.html
@@ -9,6 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/content.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1184,7 +1185,7 @@
           </div>
         </div>
       </div>
-      <div class="delivery">
+      <div class="payment">
         <div class="container">
           <div class="with_sidebar-container">
             <div class="left_sidebar_nav">
@@ -1218,7 +1219,64 @@
               </div>
             </div>
             <div class="right_content-container">
-
+              <div class="about-section">
+                <div class="text-block">
+                  Заказывайте товары из нашего онлайн-каталога и оплачивайте их любым удобным способом – наличными, картой, безналичным платежом. Вместе с заказом мы выдадим вам все необходимые документы.
+                  Заказывайте товары из нашего онлайн-каталога и оплачивайте их любым удобным способом – наличными, картой, безналичным платежом. Вместе с заказом мы выдадим вам все необходимые документы.
+                </div>
+                <div class="img-block">
+                  <img src="images/intro.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="payment-variable-container">
+            <div class="payment-block">
+              <div class="block-content">
+                <div class="icon-section"><i class="far fa-credit-card"></i></div>
+                <div class="block-title">Наличными при получении</div>
+                <div class="text-section">
+                  <p class="text-heading">При доставке курьером</p>
+                  <p class="text">Оплатите заказ наличными курьеру в момент его получения в регионах присутствия магазинов «Сантехника-Онлайн».</p>
+                  <p class="text-heading">При самовывозе из магазинов</p>
+                  <p class="text">Оплатите заказ наличными при получении в <a href="№">магазинах «Сатра»</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="payment-block">
+              <div class="block-content">
+                <div class="icon-section"><i class="fas fa-university"></i></div>
+                <div class="block-title">Картой при получении</div>
+                <div class="text-section">
+                  <p class="text-heading">При доставке курьером</p>
+                  <p class="text">Оплатите заказ наличными курьеру в момент его получения в регионах присутствия магазинов «Сантехника-Онлайн».</p>
+                  <p class="text-heading">При самовывозе из магазинов</p>
+                  <p class="text">Оплатите заказ банковской картой при получении в <a href="#">магазинах «Сатра»</a>.</p>
+                </div>
+              </div>
+            </div>
+            <div class="payment-block">
+              <div class="block-content">
+                <div class="icon-section"><i class="far fa-credit-card"></i></div>
+                <div class="block-title">Картой на сайте</div>
+                <div class="text-section">
+                  <p class="text-heading">При доставке курьером</p>
+                  <p class="text">Оплатите заказ и доставку в личном кабинете после подтверждения заказа сотрудником контакт-центра.</p>
+                  <p class="text">Все операции по карте осуществляются при полном соблюдении требований компаний VISA International и Mastercard Worldwide.</p>
+                  <p class="text">Безопасность обработки интернет-платежей гарантирована международным сертификатом безопасности PCI DSS. Оплата происходит через ПАО «Сбербанк».</p>
+                </div>
+              </div>
+            </div>
+            <div class="payment-block">
+              <div class="block-content">
+                <div class="icon-section"><i class="far fa-credit-card"></i></div>
+                <div class="block-title">Безналичным платежом</div>
+                <div class="text-section">
+                  <p class="text-heading">При любых способах получения заказа</p>
+                  <p class="text">Оплатите заказ безналичным платежом, услуга доступна физическим и юридическим лицам.</p>
+                  <p class="text">Счет на оплату придет на электронную почту после подтверждения заказа сотрудником контакт-центра.</a></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -1391,7 +1449,7 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/assets.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/about.js"></script>
+    <script src="js/content.js"></script>
   </div>
 </body>
 
