--- a/SHOP_dist/app/warranty.html
+++ b/SHOP_dist/app/warranty.html
@@ -9,6 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/content.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1165,7 +1166,7 @@
         </div>
       </div>
     </div>
-    <div class="main">
+    <div class="main none-margin">
       <div class="breadcrumbs">
         <div class="container">
           <ul class="holder">
@@ -1184,7 +1185,7 @@
           </div>
         </div>
       </div>
-      <div class="delivery">
+      <div class="warrantly">
         <div class="container">
           <div class="with_sidebar-container">
             <div class="left_sidebar_nav">
@@ -1218,7 +1219,131 @@
               </div>
             </div>
             <div class="right_content-container">
-
+              <div class="about-section">
+                <div class="text-block">
+                  «Сатра» с вами на всех этапах покупки товаров. Поможем выбрать товар, продемонстрируем соответствующие сертификаты качества, сопроводим заказ гарантийными талонами и разрешим вопросы, возникающие после покупки.
+                </div>
+                <div class="img-block">
+                  <img src="images/intro.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="info-tab-container">
+            <div class="tab-selector_block">
+              <ul class="categories_list">
+                <li class="active_nav_link"><a href="#"><span>Гарантия</span></a></li>
+                <li><a href="#"><span>Обмен</span></a></li>
+                <li><a href="#"><span>Возврат</span></a></li>
+              </ul>
+            </div>
+            <div class="tab-container">
+              <div class="tab-block">
+                <div class="left-text-section">
+                  <p>Вы можете быть уверены в качестве приобретаемых товаров, так как абсолютно все наши поставщики – проверенные производители и официальные дилеры.</p>
+                  <p>Товары, приобретенные в нашем магазине, в случае поломки или неисправности обслуживаются по гарантии сервис-центрами, авторизованными производителями. Обратите внимание, гарантийный срок на изделия устанавливают производители, он отмечен в гарантийном талоне. Обязательно проверяйте наличие гарантийного талона при приемке товара! Если гарантийные сроки соблюдены, но сервисный центр отказывается принять изделие на постпродажное обслуживание, обратитесь к нам по телефону 8-800-700-15-00, мы постараемся вам помочь.</p>
+                </div>
+                <div class="note-list">
+                  <div class="stick style1">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Внимание</div>
+                        <div class="stick-text">Адреса и телефоны сервисных центров указаны в гарантийных талонах.</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-block">
+                <div class="left-text-section">
+                  <span class="tab-title">Вы можете обменять качественный товар в течение 7 дней со дня его получения, но только один раз.</span>
+                  <span class="list-title">Условия обмена товара:</span>
+                  <ul>
+                    <li>товар не был подключен к коммуникациям;</li>
+                    <li>сохранены упаковка и товарный вид изделия;</li>
+                    <li>сохранены пломбы, фабричные ярлыки товара;</li>
+                    <li>сохранены товарный и кассовый чеки;</li>
+                    <li>сохранены установленные производителем комплектующие и документы (инструкция по эксплуатации, гарантийные талоны и т.д.).</li>
+                  </ul>
+                </div>
+                <div class="note-list">
+                  <div class="stick style1">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Внимание</div>
+                        <div class="stick-text">Уцененные товары обмену не подлежат!</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="stick style2">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Знаете ли вы, что…</div>
+                        <div class="stick-text">При обмене исправного товара транспортные расходы вы берете на себя – доставку до своего адреса и обратно до склада интернет-магазина. Избежать расходов можно, доставив обмениваемый товар самостоятельно до любого из наших магазинов. </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="stick style1">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Внимание</div>
+                        <div class="stick-text">Для согласования условий обмена необходимо позвонить на горячую линию нашего магазина по телефону 8-800-700-15-00. После этого заполнить заявление, которое вам предоставят сотрудники магазина при самостоятельном возврате товара или водитель при доставке товара на обмен.</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-block">
+                <div class="left-text-section">
+                  <span class="tab-title">Покупатель интернет-магазина может вернуть приобретенный товар в течение 7 дней со дня получения заказа, не считая дня его покупки.</span>
+                  <span class="tab-title">Возврат товара ненадлежащего качества</span>
+                  <p>Вы можете отказаться от заказа при приемке товара, если нарушена его целостность, внешний вид или его размеры, комплектация не соответствуют характеристикам, описанным на сайте. Рекомендуем внимательно ознакомиться с изделием во время приемки.</p>
+                  <span class="list-title">Условия обмена товара:</span>
+                  <ul>
+                    <li>товар не был подключен к коммуникациям;</li>
+                    <li>сохранены упаковка и товарный вид изделия;</li>
+                    <li>сохранены пломбы, фабричные ярлыки товара;</li>
+                    <li>сохранены товарный и кассовый чеки;</li>
+                    <li>сохранены установленные производителем комплектующие и документы (инструкция по эксплуатации, гарантийные талоны и т.д.).</li>
+                  </ul>
+                  <a href="#">Сервисные центры</a>
+                </div>
+                <div class="note-list">
+                  <div class="stick style1">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Внимание</div>
+                        <div class="stick-text">Уцененные товары обмену не подлежат!</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="stick style2">
+                    <div class="stick-container">
+                      <div class="stick-content">
+                        <div class="stick-title">Внимание</div>
+                        <div class="stick-text">Уцененные товары обмену не подлежат!</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="map_wrapper">
+          <iframe src="https://yandex.ua/map-widget/v1/-/CBFnvGGCxC" frameborder="1" allowfullscreen="true"></iframe>
+          <div class="b-map-office__cart u-hidden--mobile">
+            <h3 class="b-map-office__cart-title">Центральный офис «Сатра»</h3><a href="https://pp.sant-on.ru/about/#" class="b-map-office__cart-modal-close"></a>
+            <div class="b-map-office__cart-address">Москва, ул. Новоорловская. 3а</div><a class="b-map-office__cart-link-gallery"><img class="b-map-office__cart-img" src="images/about-lotos.png"></a>
+            <div class="b-map-office__cart-work"></div>
+            <div class="b-map-office__cart-phone">+7 (495) 937-38-67</div>
+            <div class="buttons">
+              <button type="button" tabindex="0">
+                Оставить отзыв
+              </button>
+              <button type="button" tabindex="0">
+                Контакты
+              </button>
             </div>
           </div>
         </div>
@@ -1391,7 +1516,7 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/assets.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/about.js"></script>
+    <script src="js/content.js"></script>
   </div>
 </body>
 
