--- a/SHOP_dist/app/agreement.html
+++ b/SHOP_dist/app/agreement.html
@@ -1219,6 +1219,7 @@
               </div>
             </div>
             <div class="right_content-container">
+              <!--соглашение-->
               <div class="terms-container">
                 <p>Текст Договора является публичной офертой (в соответствии со статьей 435 и частью 2 статьи 437 Гражданского кодекса РФ).</p>
                 <b>Настоящий Договор не требует двустороннего подписания и действителен в электронном виде.</b>
