--- a/portfolio/FLG/app/product.html
+++ b/portfolio/FLG/app/product.html
@@ -6,6 +6,7 @@
   <title>FLG</title>
   <meta name="description" content="">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="css/libs.css">
   <link rel="stylesheet" href="css/all.css">
