--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -172,16 +172,16 @@
 
       <!--Новый лендинг-->
       <!--Шрифты только для демонстрации, удалить на сатре-->
-      <link rel="stylesheet" type="text/css" href="ruslanmmr.github.io/Shop/landing/app/css/fonts.css" media="all">
+      <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/fonts.css" media="all">
       <!---->
-      <link rel="stylesheet" type="text/css" href="ruslanmmr.github.io/Shop/landing/app/css/landing-page.css" media="all">
+      <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/landing-page.css" media="all">
       <div class="landing">
         <div class="top-section">
           <div class="landing__container">
             <div class="top-section__content">
               <div class="top-section__title"><span>Распродажа года</span> - только 3 дня!</div>
               <div class="top-section__discount-item">
-                <img class="top-section__discount-image" src="ruslanmmr.github.io/Shop/landing/app/img/percent-item.png" alt="discount">
+                <img class="top-section__discount-image" src="https://ruslanmmr.github.io/Shop/landing/app/img/percent-item.png" alt="discount">
               </div>
               <div class="top-section__timer timer">
                 <div class="timer__title">До окончания акции:</div>
@@ -493,7 +493,7 @@
   <script type="text/javascript" src="/templates/satra/js/eskju.jquery.scrollflow.min.js"></script>
   <script type="text/javascript" src="/templates/satra/js/main.js?2"></script>
   <!--new script-->
-  <script type="text/javascript" src="https://ruslanmmr.github.io/Shop/landing/app/countdown.js"></script>
+  <script type="text/javascript" src="https://https://ruslanmmr.github.io/Shop/landing/app/countdown.js"></script>
   <script>
     $(document).ready(function(){
       setTimeout(function() {
