--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -168,14 +168,13 @@
       </div>
     </header>
 
-    <div id="content" class="sticky-panel">
-
-      <!--Новый лендинг-->
-      
+    <!--Новый лендинг-->
+    <div id="content">
       <!--Шрифты только для демонстрации, удалить на сатре-->
       <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/fonts.css" media="all">
       <!---->
       <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/landing-page.css" media="all">
+
       <div class="landing">
         <div class="top-section">
           <div class="landing__container">
@@ -357,29 +356,6 @@
           </div>
         </div>
       </div>
-
-      <!--noindex-->
-      <div class="sticky-box fix">
-        <div class="cont-in">
-          <div class="sticky-box-phone"><a href="tel:8%20(499)%20753-88-88">8 (499) 753-88-88</a></div>
-          <div class="sticky-box-relations"><a href="#feedback_form_popup_area" class="fancy">Обратная связь</a></div>
-          <div class="sticky-box-compare disabled">
-            <div class="sticky-box-compare-wrapper">
-              <a href="/emarket/compare/" rel="nofollow"><span>0 шт.</span><b class="btn btn-green">Сравнить</b></a>
-              <div class="floating_compare">
-                <div class="compareboxfixed"></div>
-              </div>
-            </div>
-          </div>
-          <div class="sticky-box-price disabled">
-            <div class="sticky-box-price-wrapper"><a href="#">
-                <p><span class="number"></span><span class="price">Добавьте товар</span></p>
-                <b class="btn btn-green">Оформить заказ</b>
-              </a></div>
-          </div>
-        </div>
-      </div>
-      <!--/noindex-->
     </div>
 
     <footer id="footer">
